# open-bridge

./: .bridge-origin  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ACKNOWLEDGMENTS.md  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  bridge-config.yaml.template  ecosystem.example.yaml  pr-review-prompt.md  release-please-config.json
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
agents/: README.md  pyproject.toml
agents/_gateway/: README.md  SPEC.md  gateway.example.yaml  pyproject.toml  registry.example.yaml
agents/_gateway/gateway/: __init__.py  __main__.py  a2a_client.py  config.py  errors.py  registry.py  server.py  tiers.py
agents/_gateway/tests/: conftest.py  fake_a2a.py  test_a2a_client.py  test_config.py  test_integration_mcp.py  test_registry.py  test_server_tools.py  test_tiers.py
agents/_runtime/: __init__.py  card.py  config.py  executor.py  runner.py  server.py
agents/_template/: agent.yaml  system-prompt.md
agents/_template/tools/: .gitkeep  intake_notify.py
agents/tests/: test_card.py  test_config.py  test_hardening.py  test_intake_notify.py  test_runner.py  test_server.py  test_template.py
docs/: README.md  agents.html  bridge-deck.md  calendar.md  changelog.html  channels.md  cloud-accounts.md  concepts.html  demo.html  doc-system.md  explore.html  extension-model.md  feature-tour.md  index.html  knowledge-repo-pattern.md  landing.html  mandants.md  memory.md  multi-instance.md  okf-export.md  org-overlays.md  personas.md  releasing.md  remotes.md  repo-layout.md  representative-agent.md  skill-distribution-architecture.md  structure.md  transcription-worker.md  use-cases.html  work-system.md  workspace-acceptance-test.md  workspaces.html  workspaces.md
examples/: bridge-deck.config.yaml.template
rules/: theme.md  (+19 more)
(+348 files in other folders)
