[project]
name = "bridge-gateway"
version = "0.1.0"
description = "Thin, stateless MCP->A2A gateway: MCP clients talk to bridge A2A agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28.1,<2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "uvicorn>=0.35.0",
]
# No [build-system] — like agents/: not packaged, runs via pythonpath.
# Test deps stay OUT of [project]; injected ephemerally (upstream idiom):
#   uv run --with pytest --with pytest-asyncio pytest

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
